Prevent multiple 'on_ended' calls due to track switches

If a track switch happens after the renderers are in a
fully ended state, we should make sure that an extra
ended event isn't fired.

Bug: 867872
Change-Id: I0685b46aafa76ccec57d5de7ddde4919c08c866e
Reviewed-on: https://chromium-review.googlesource.com/1153144
Commit-Queue: Ted Meyer <tmathmeyer@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584968}
Former-commit-id: df03a5bf1fb0159e9f1e8464f8b136a9a2cd650a